--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,11 @@
     <finalName>springSecurityPOC</finalName>
 	<plugins>
 	  <plugin>
+		<groupId>org.apache.tomcat.maven</groupId>
+		<artifactId>tomcat7-maven-plugin</artifactId>
+		<version>2.2</version>
+	 </plugin>
+	  <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
 	    <artifactId>maven-compiler-plugin</artifactId>
 	    <version>${build.plugins.plugin.version}</version>
